--- a/.github/workflows/coverageAction.yaml
+++ b/.github/workflows/coverageAction.yaml
@@ -3,12 +3,22 @@ on:
   push:
     branches:
       - master
-      - main
 jobs:
   coverage:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ArtiomTr/jest-coverage-report-action@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
         with:
-            package-manager: pnpm
+          node-version: 20
+      - name: setup pnpm
+        uses: pnpm/action-setup@v3
+        with:
+            version: 8
+      - name: Install dependencies
+        run: pnpm install
+      - name: run tests and collect coverage
+        run: pnpm coverage
+
